--- a/style.css
+++ b/style.css
@@ -21,7 +21,6 @@ body{
     margin: 1rem;
     display: flex;
     flex-direction: column;
-    align-items: center;
     background-color: #4C5B66 ;
 }
 
@@ -91,22 +90,66 @@ body{
 .general-description{
     width: 50%;
     color: #D9D9D9;
-
+    padding-right: 7rem;
+    font-size: 1rem;
+    margin-top: 4rem;
 }
 
 h1{
-    font-size: 3rem;
+    font-size: 3.8rem;
 }
 
+.description>h2{
+    margin-top: 1rem;
+}
 .description>h3{
     color: #747f87;
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+
 }
 
 .buttons{
+    width: 100%;
     display: flex;
-  
+    align-items: center;
+    margin-bottom: 4rem;
+}
+
+.buttons>h2{
+    margin: 1rem;
+    font-size: 1rem;
+}
+
+.buttons>a{
+    color: #D9D9D9;
+    font-size: 1.2rem;
+}
+
+.button{
+    background-color: #3F98D3;
+    color: #D9D9D9;
+    padding: 1rem;
+    border-radius: 2rem;
 }
 .icons{
+    width: 100%;
+    height: 4rem;
     display: flex;
-    justify-content: space-between;
+    justify-content: space-around;
+    background-color: #ebebeb;
+    align-items: center;
+
+}
+
+.icons>li{
+    list-style: none;
+    width: 4rem;
+    height: 4rem;
+    display: flex;
+    justify-content: center;
+}
+
+.adidas{
+    margin: 0.7rem;
 }
