--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 *{
 margin: 0rem;
 padding: 0rem;
+font-family: Arial;
 }
 
 body{
@@ -82,7 +83,7 @@ body{
 }
 
 .img-phone{
-    width: 20rem;
+    width: 23rem;
     display: flex;
     align-items: center;
 }
@@ -96,7 +97,7 @@ body{
 }
 
 h1{
-    font-size: 3.8rem;
+    font-size: 3.5rem;
 }
 
 .description>h2{
@@ -105,7 +106,7 @@ h1{
 .description>h3{
     color: #747f87;
     margin-top: 1rem;
-    margin-bottom: 2rem;
+    margin-bottom: 3rem;
 
 }
 
@@ -130,7 +131,10 @@ h1{
     background-color: #3F98D3;
     color: #D9D9D9;
     padding: 1rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
     border-radius: 2rem;
+    font-size: 1rem;
 }
 .icons{
     width: 100%;
