--- a/style.css
+++ b/style.css
@@ -19,7 +19,6 @@ body{
 .header{
     width: 100%;
     height: auto;
-    margin: 1rem;
     display: flex;
     flex-direction: column;
     background-color: #4C5B66 ;
@@ -157,3 +156,51 @@ h1{
 .adidas{
     margin: 0.7rem;
 }
+
+main{
+    width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #F5F5F5;
+
+}
+.section-services{
+    width: 100%;
+    margin: 3rem;
+    display: flex;
+    justify-content:space-evenly;    
+    align-items: center;
+}
+
+.card-services{
+    width: 25rem;
+    margin: 2rem;
+    text-align: center;
+}
+
+.card-services>img{
+    margin-bottom: 1.5rem;
+    width: 12rem;
+}
+
+.card-services>h2{
+    margin-bottom: 1rem;
+    color: #4C5B66;
+}
+.card-services>h3{
+    margin-bottom: 3rem;
+    color: #747f87;
+}
+
+.card-services>a{
+    font-size: 1.2rem;
+    color: #D9D9D9;
+    text-decoration: none;
+    padding: 1rem;
+    margin-bottom: 2rem;
+    background-color: #3F98D3;
+    border-radius: 0.5rem;
+}
+
