--- a/style.css
+++ b/style.css
@@ -167,7 +167,9 @@ main{
     flex-direction: column;
     align-items: center;
     background-color: #f9f9f9;
-    padding: 5%;
+    padding-left: 5%;
+    padding-right: 5%;
+
 }
 
 .section-services{
@@ -381,4 +383,27 @@ main{
     text-decoration: none;
     color: #3F98D3;
     font-size: 1.3rem;
+}
+
+footer{
+    color:#c0c0c0;
+    font-size: 0.8rem;
+    width: 90%;
+    height: auto;
+    padding-top: 1rem;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-bottom: 2rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-top:0.3rem solid #e3e3e3;
+    background-color: #f9f9f9;
+}
+
+
+.red-social>a>img{
+    width: 4.5rem;
+    margin-right: 1rem;
+
 }
